crates/plotnik-tests/tests/02-parser/recovery_validation/capture_space_after_dot_is_anchor.txt
(identifier) @foo . (other)
------------------ DIAGNOSTICS -------------------
error: definition must be named
 --> query.ptk:1:1
  |
1 | (identifier) @foo . (other)
  | ^^^^^^^^^^^^^^^^^
  |
help: add a PascalCase definition name and `=` before `(identifier) @foo`

error: definition must be named
 --> query.ptk:1:19
  |
1 | (identifier) @foo . (other)
  |                   ^
  |
help: add a PascalCase definition name and `=` before `.`

error: definition must be named
 --> query.ptk:1:21
  |
1 | (identifier) @foo . (other)
  |                     ^^^^^^^
  |
help: add a PascalCase definition name and `=` before `(other)`
